// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Component emits debounce changes 1`] = `
<div class="flex items-center w-full p-1 space-x-2 rounded-sm outline-none focus-within:border-vanilla-400 border border-ink-100 bg-ink-400 text-vanilla-300 h-10 text-sm space-x-2 leading-8 py-2 px-3"> <input aria-label="" name="" type="text" placeholder="captain@marvel.com" class="flex flex-grow w-full overflow-hidden bg-transparent outline-none overflow-ellipsis caret-juniper">
  <!---->
</div>
`;

exports[`Input Component renders a disabled input 1`] = `
<div class="flex items-center w-full p-1 space-x-2 rounded-sm outline-none focus-within:border-vanilla-400 border border-ink-100 bg-ink-400 text-slate cursor-not-allowed h-10 text-sm space-x-2 leading-8 py-2 px-3"> <input aria-label="" name="" type="text" placeholder="Enter a value" disabled="disabled" class="flex flex-grow w-full overflow-hidden bg-transparent outline-none overflow-ellipsis caret-juniper cursor-not-allowed">
  <!---->
</div>
`;

exports[`Input Component renders a readonly input 1`] = `
<div class="flex items-center w-full p-1 space-x-2 rounded-sm outline-none focus-within:border-vanilla-400 border border-ink-100 bg-ink-400 text-vanilla-400 cursor-not-allowed h-10 text-sm space-x-2 leading-8 py-2 px-3"> <input aria-label="" name="" type="text" placeholder="Enter a value" readonly="readonly" class="flex flex-grow w-full overflow-hidden bg-transparent outline-none overflow-ellipsis caret-juniper cursor-not-allowed">
  <!---->
</div>
`;

exports[`Input Component renders an input with clearable 1`] = `
<div class="flex items-center w-full p-1 space-x-2 rounded-sm outline-none focus-within:border-vanilla-400 border border-ink-100 bg-ink-400 text-vanilla-300 h-10 text-sm space-x-2 leading-8 py-2 px-3"> <input aria-label="" name="" type="text" placeholder="Enter a value" class="flex flex-grow w-full overflow-hidden bg-transparent outline-none overflow-ellipsis caret-juniper"> <svg viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" fill="none" class="cursor-pointer z-icon w-4 h-4 z-icon--x text-vanilla-400">
    <line x1="18" y1="6" x2="6" y2="18"></line>
    <line x1="6" y1="6" x2="18" y2="18"></line>
  </svg></div>
`;

exports[`Input Component renders an invalid input 1`] = `
<div class="flex items-center w-full p-1 space-x-2 rounded-sm outline-none border border-cherry bg-ink-400 text-vanilla-300 h-10 text-sm space-x-2 leading-8 py-2 px-3"> <input aria-label="" name="" type="text" placeholder="Enter a value" class="flex flex-grow w-full overflow-hidden bg-transparent outline-none overflow-ellipsis caret-juniper">
  <!---->
</div>
`;

exports[`Input Component renders an invalid input with custom color 1`] = `
<div class="flex items-center w-full p-1 space-x-2 rounded-sm outline-none border border-cherry bg-ink-400 text-vanilla-300 h-10 text-sm space-x-2 leading-8 py-2 px-3"> <input aria-label="" name="" type="text" placeholder="Enter a value" class="flex flex-grow w-full overflow-hidden bg-transparent outline-none overflow-ellipsis caret-juniper">
  <!---->
</div>
`;

exports[`Input Component renders the default input component 1`] = `
<div class="flex items-center w-full p-1 space-x-2 rounded-sm outline-none focus-within:border-vanilla-400 border border-ink-100 bg-ink-400 text-vanilla-300 h-10 text-sm space-x-2 leading-8 py-2 px-3"> <input aria-label="" name="" type="text" placeholder="Enter a value" class="flex flex-grow w-full overflow-hidden bg-transparent outline-none overflow-ellipsis caret-juniper">
  <!---->
</div>
`;

exports[`Input Component renders the input with custom placeholder 1`] = `
<div class="flex items-center w-full p-1 space-x-2 rounded-sm outline-none focus-within:border-vanilla-400 border border-ink-100 bg-ink-400 text-vanilla-300 h-10 text-sm space-x-2 leading-8 py-2 px-3"> <input aria-label="" name="" type="text" placeholder="captain@marvel.com" class="flex flex-grow w-full overflow-hidden bg-transparent outline-none overflow-ellipsis caret-juniper">
  <!---->
</div>
`;
